# dkmes

./: .gitignore  ARCHITECTURE.md  DKMES_Documentation.md  IMPLEMENTATION_PLAN.md  README.md  VISION.md  docker-compose.yml  evaluation.json  evaluation_result.json  prompt_list.md
agent_beta/: ingest_docs.py  main.py
agent_gamma/: README.md  main.py  pyproject.toml
agent_gamma/frontend/: index.html  vite.config.ts
agent_gamma/frontend/src/: App.css  App.tsx  index.css
agent_gamma/static/: index.html
backend/: .env.local  .gemini_cache.json  assessment.db  feedback.db  kep.db  list_models.py  main.py  pyproject.toml  test_vector.py
backend/api/: a2a.py  documents.py  prompts.py  settings.py
backend/core/: a2a.py  a2a_client.py  assessment.py  config.py  feedback.py  gemini_client.py  kep.py  prompt_manager.py  task_manager.py  tools.py  tracer.py
backend/core/tools/: __init__.py  analysis.py  base.py  external.py  planning.py  retrieval.py
backend/data/: prompts.json
backend/data/chroma/1b2d176b-a9b2-451b-ba68-b72a7d55b194/: index_metadata.pickle
backend/data/chroma/377e3247-7b4f-41f6-8aed-ae52be7e6dea/: index_metadata.pickle
backend/data/chroma/bc4d301d-569f-4668-b190-547ebf71d551/: index_metadata.pickle
backend/data/chroma/f28bb9e0-f050-4e7c-b27d-ab281c2e5c3f/: index_metadata.pickle
backend/data/chroma_test/: chroma.sqlite3
backend/knowledge/: graph_provider.py  provider.py  router.py  vector_provider.py
frontend/: batch_evaluation.json  batch_evaluation_example.json  index.html  package-lock.json  package.json  tailwind.config.js
(+31 files in other folders)
