[tool.poetry]
name = "agent-gamma"
version = "1.0.0"
description = "Data Analytics Agent for DKMES Multi-Agent Orchestration"
authors = ["DKMES Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
httpx = "^0.25.0"
pydantic = "^2.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
